AMBR-777 Fix jumping author names onClick
Reverted back to original CSS for the author names & tooltip

--- a/src/main/webapp/WEB-INF/themes/desktop/sass/pages/_article.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/pages/_article.scss
@@ -41,7 +41,6 @@ $article-sidebar-width: 160;
 // extensible layout styles
 .text-article-intro {
   font-size: $txt-size-default;
-  line-height: $line-height;
   color: $grey-med-dark;
 
   a {
@@ -274,7 +273,6 @@ $article-sidebar-width: 160;
 
   h1 {
     @extend .title-primary;
-    margin-bottom: $line-height-small;
     i,
     italic,
     named-content {
@@ -466,7 +464,7 @@ $article-sidebar-width: 160;
   @extend .text-article-intro;
   overflow: visible;
   margin-left: 0;
-  margin-bottom: $line-height;
+  margin-bottom: $pad-small;
 
   li {
     float: left;
@@ -485,7 +483,7 @@ $article-sidebar-width: 160;
     > a,
     > span {
       display: inline-block;   // needed to overwrite the inline-list
-      padding: 0 $pad-highlight-x; //TODO line-height;
+      padding: $pad-highlight $pad-highlight-x; //TODO line-height;
     }
   }
   .contribute {
@@ -628,22 +626,19 @@ $article-sidebar-width: 160;
       &:hover {
         @extend %brand-background;
       }
-        a {
-      color: $white;
-    }
+      a {
+        color: $white;
+      }
       .plosone & {
         &:not(.no-pdf) {
-         
+
           &:hover,
           a:hover {
             color: $black;
-          
           }
         }
       }
     }
-
-  
   }
 
   .dload-hover {
